--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ section {
     padding: 20px;
 }
 
-#clients .col-2-3 [class*='col-'] {
+#Projects .col-2-3 [class*='col-'] {
     padding: 0;
 }
 
@@ -1383,7 +1383,7 @@ blockquote {
 
 /* --------- 6.6 Clients ---------- */
 
-#clients a {
+#Projects a {
     display: block;
     text-align: center;
     position: relative;
@@ -1392,12 +1392,11 @@ blockquote {
     color: #fff;
 }
 
-#clients img {
+#Projects img {
     display: inline-block;
-    padding: 15px 25px;
 }
 
-.client-overlay {
+.Projects-overlay {
     background: rgba(0, 0, 0, 0.8);
     position: absolute;
     top;
@@ -1414,17 +1413,20 @@ blockquote {
     transition: all 0.3s ease-out;
 }
 
-#clients a:hover .client-overlay {
+#Projects a:hover .Projects-overlay {
     opacity: 1;
 }
 
-.client-overlay span {
+.Projects-overlay span {
     position: absolute;
-    top: 48%;
+    top: 10%;
     left: 0;
     width: 100%;
     text-align: center;
     display: inline-block;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 12px;
 }
 
 /* --------- 6.7 Pricing Table ---------- */
