--- a/css/namari-color.css
+++ b/css/namari-color.css
@@ -328,6 +328,14 @@ h6 {
     color:#999;
 }
 
-.verticalLine {
+.verticalLineR {
   border-right: 2px solid #000000;
+}
+
+.verticalLineL {
+  border-left: 2px solid #000000;
+}
+
+#map {
+    height: 300px;
 }
