--- a/css/style.css
+++ b/css/style.css
@@ -2332,7 +2332,21 @@ blockquote {
         height: 432px !important;
     }
 
+    .verticalLineR {
+        border-right: 2px solid #000000;
+    }
+
+    .verticalLineL {
+        border-left: 2px solid #000000;
+    }
+
+    #map {
+        height: 300px;
+    }
+
 }
+
+
 
 
 
